# midi-analyzer

./: .gitignore  AGENTS.md  MIDI_Pattern_Extractor_Spec.md  README.md  artists.txt  midi_library.db-shm  midi_library.db-wal  pyproject.toml
.beads/: issues.jsonl
.github/: copilot-instructions.md
MIDI2/: 070-shake-anyma-black-dress-anyma-remix-20231109151651-nonstop2k.com.mid  4-MIDI 6.mid  4-strings-take-me-away-into-the-night-vocal-radio-mix-23671-nonstop2k.com.mid  ARTBAT-Closer-feat-WhoMadeWho-rlc-winston-20210110165350-nonstop2k.com.mid  ATB-Ben-Samama-Like-That-fairydance88-20210825214437-nonstop2k.com.mid  ATB-Message-Out-To-You-ft-Robbin-Jonnis-F51-Frozen-Ray-20180927212029-nonstop2k.com.mid  ATB-Never-Without-You-ft-Sean-Ryan-Frozen-Ray-20180927212046-nonstop2k.com.mid  ATB-Topic-A7S-Your-Love-9PM-Ti-sto-Remix-fairydance88-20210414155206-nonstop2k.com.mid  ATB-Topic-A7S-Your-Love-9PM-theseus-20210308212041-nonstop2k.com.mid  ATB-You-re-The-Last-Thing-I-Need-theseus-20211113144654-nonstop2k.com.mid  Alan-Fitzpatrick-Lawrence-Hart-Warning-Signs-CamelPhat-Remix-fairydance88-20210714110226-nonstop2k.com.mid  Aly-Fila-Menes-rlc-winston-20181020193004-nonstop2k.com.mid  Anish-Kumar-Barry-Can-t-Swim-Blackpool-Boulevard-Edit-guru-work1-20220807204454-nonstop2k.com.mid  Armin-van-Buuren-Aly-Fila-Kazi-Jay-For-All-Time-fairydance88-20211124165037-nonstop2k.com.mid  Autograf-Tiina-Love-Runs-Deep-theseus-20220402155239-nonstop2k.com.mid  BT-Emma-Hewitt-No-Warning-Lights-theseus-20210110174034-nonstop2k.com.mid  Barry-Can-t-Swim-Laurence-Guy-Can-We-Still-Be-Friends-fairydance88-20220725175255-nonstop2k.com.mid  Bastille-CamelPhat-Distorted-Light-Beam-CamelPhat-Remix-fairydance88-20210915175330-nonstop2k.com.mid  Ben-B-hmer-Beyond-Beliefs-fairydance88-20210804165516-nonstop2k.com.mid  Ben-B-hmer-Breathing-feat-Nils-Hoffmann-Malou-rlc-winston-20211211164019-nonstop2k.com.mid  Ben-B-hmer-Fliederregen-max123a-20211117111315-nonstop2k.com.mid  Ben-B-hmer-Gordi-The-Blaze-Slow-Wave-The-Blaze-Remix-fairydance88-20220509064425-nonstop2k.com.mid  Ben-B-hmer-JONAH-Home-fairydance88-20220619212750-nonstop2k.com.mid  Ben-B-hmer-Panama-Weightless-DJ-Seinfeld-Remix-fairydance88-20211117113328-nonstop2k.com.mid  Ben-B-hmer-Wood-Reflection-fairydance88-20220619212808-nonstop2k.com.mid  Ben-B-hmer-laura-Erase-max123a-20211120155727-nonstop2k.com.mid  Bicep-Apricots-fairydance88-20210120084840-nonstop2k.com.mid  Bicep-Atlas-fairydance88-20220619214211-nonstop2k.com.mid  Bicep-Clara-La-San-Saku-fairydance88-20220619212844-nonstop2k.com.mid  Bicep-Four-Tet-Opal-Four-Tet-Remix-fairydance88-20220309110704-nonstop2k.com.mid  (+443 more)
tests/: __init__.py  (+22 more)
(+49 files in other folders)
