[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midi-analyzer"
version = "0.1.0"
description = "Analyze MIDI files to extract reusable musical patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Graham Wheeler" },
]
keywords = ["midi", "music", "analysis", "patterns", "arpeggio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mido>=1.3.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "musicbrainzngs>=0.7.1",
    "tenacity>=8.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
music21 = [
    "music21>=9.1.0",
]
player = [
    "pygame>=2.5.0",
]
gui = [
    "PyQt6>=6.5.0",
]

[project.scripts]
midi-analyzer = "midi_analyzer.cli:cli"

[project.urls]
Homepage = "https://github.com/gramster/midi-analyzer"
Repository = "https://github.com/gramster/midi-analyzer"
Issues = "https://github.com/gramster/midi-analyzer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/midi_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["midi_analyzer"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "mido.*",
    "musicbrainzngs.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=midi_analyzer --cov-report=term-missing"

[tool.coverage.run]
source = ["src/midi_analyzer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
